# codebots

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
codebots/: cli.py  config.py  logging.py
codebots/agents/: base.py  registry.py
codebots/agents/exec/: platform_engineer.py  qa_engineer.py  reviewer.py  software_engineer.py
codebots/agents/plan/: architect.py  product_manager.py  program_manager.py
codebots/agents/review/: architecture.py  build_system.py  dependencies.py  docs.py  quality.py  repo_overview.py  security.py
codebots/llm/: factory.py  mock.py  openai_compat.py  provider.py
codebots/orchestration/: artifacts.py  context.py  execute.py  plan.py  review.py  verify.py
codebots/repo/: fs.py  scan.py
codebots/tools/: commands.py  models.py  patch.py  safe_fs.py
docs/: agents.md  architecture.md  quickstart.md
examples/: config.yaml
jobs/dim_case_updater/: Dockerfile  main.py  requirements.txt
sql/external_tables/: ext_cases_avro_dev.sql  ext_cases_avro_prod.sql
sql/merges/: merge_dim_case.sql
sql/tables/: dim_case.sql  ops_pipeline_state.sql  ops_stream_config.sql
sql/views/: vw_cases_current_dev.sql  vw_cases_current_prod.sql
src/codebots/: __init__.py  cli.py  config.py
src/codebots/agents/: __init__.py  architect.py  base.py  pgm.py  platform.py  pm.py  qa.py  registry.py  reviewer.py  security.py  swe.py
src/codebots/core/: artifacts.py  dag.py  events.py  models.py  repo.py  verify.py
src/codebots/llm/: __init__.py  base.py  factory.py  mock.py  openai_compat.py
src/codebots/workflows/: __init__.py  build.py  plan.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_config.py  test_dag.py  test_plan.py  test_review_runner.py  test_scan.py
