[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebots"
version = "0.2.0"
description = "Drop-in multi-agent CLI that reviews, plans, and edits any git repo with a robust role-based agent team."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Codebots"}]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.6.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[project.scripts]
codebots = "codebots.cli:app"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
